--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       poster="https://assets.codepen.io/6093409/river.jpg"
     >
       <source
-        src="https://cdn.shopify.com/videos/c/o/v/e90c4606c207413a99de8cf23380a01d.mp4"
+        src="https://cdn.shopify.com/videos/c/o/v/e18be7fb925849399224f74d97ea368f.mp4"
         type="video/mp4"
       />
     </video>
 
-    <!-- <h1>A REVOLUÇÃO</h1>
-    <h2>Começou!</h2> -->
+    <h1>A REVOLUÇÃO</h1>
+    <h2>Começou!</h2>
   </body>
 </html>
