--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       autoplay
       loop
       muted
-      poster="https://assets.codepen.io/6093409/river.jpg"
+      poster="https://cdn.shopify.com/s/files/1/0576/1446/7204/files/image_16.png"
     >
       <source
         src="https://cdn.shopify.com/videos/c/o/v/e18be7fb925849399224f74d97ea368f.mp4"
