--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       />
     </video>
 
-    <h1>A REVOLUÇÃO</h1>
-    <h2>Começou!</h2>
+    <h1>DELEITE</h1>
+    <h2>DE AVEIA</h2>
   </body>
 </html>
